fix(Layout): Header items align center

--- a/packages/agora-scenario-ui-kit/src/components/layout/index.css
+++ b/packages/agora-scenario-ui-kit/src/components/layout/index.css
@@ -15,7 +15,7 @@
 }
 
 .layout-header {
-  @apply flex flex-row border-b border-gray-100 w-full;
+  @apply flex flex-row justify-between items-center border-b border-gray-100 w-full bg-white;
   height: 44px;
 }
 
